[gd_scene load_steps=7 format=3 uid="uid://bn5jb4idrwp0i"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_kndsv"]
[ext_resource type="FontFile" uid="uid://cwbt2ugsjq30h" path="res://font/Dihil.ttf" id="1_v0erh"]
[ext_resource type="StyleBox" uid="uid://b4e32tfqu7tgh" path="res://btn_stlyle.tres" id="2_jq4lr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xw05h"]
bg_color = Color(0.584076, 0.525726, 0.965434, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 5.0

[sub_resource type="InputEventAction" id="InputEventAction_ycs7i"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_kifh1"]
events = [SubResource("InputEventAction_ycs7i")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kndsv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 10.0
offset_right = -1.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 118.0
offset_right = 102.0
offset_bottom = 199.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_v0erh")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.193
anchor_right = 0.76
anchor_bottom = 0.304
offset_left = -33.64
offset_top = 301.0
offset_right = 33.2
offset_bottom = 280.12
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_v0erh")
theme_override_font_sizes/font_size = 64
text = "Vit√≥ria e Eduardo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = 595.0
offset_right = -140.0
offset_bottom = -61.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.878431, 0.764706, 0.176471, 1)
theme_override_fonts/font = ExtResource("1_v0erh")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("2_jq4lr")
theme_override_styles/hover = ExtResource("2_jq4lr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xw05h")
theme_override_styles/focus = ExtResource("2_jq4lr")
shortcut = SubResource("Shortcut_kifh1")
text = "start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Control/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
